# surrogate

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  agents.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: background.md  generate_plots.py  getting-started.md  index.md
docs/guide/: active-learning.md  basic-usage.md  plotting.md
docs/reference/: model.md  plotting.md  preprocessing.md
examples/: basic_usage.py  plotting_example.py
src/surrogate/: __init__.py  architectures.py  model.py  plotting.py  preprocessing.py
tests/: conftest.py  test_active_learning.py  test_model.py  test_preprocessing.py  test_serialization.py
