[project]
name = "surrogate"
version = "0.1.0"
description = "DataFrame-in/DataFrame-out surrogate modelling with uncertainty quantification, powered by Deep Gaussian Processes"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dgpsi>=2.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/surrogate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.uv]
# first line of defence for liteLLM-type attacks
exclude-newer = "1 week"